Fixed Navbar alignment and Hero text

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 270px;
-  background-color: var(--color-black);
+  background-color: #121212;
   gap: 40px;
 }
 
